fix: refine spacing for inline elements and list items

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -125,7 +125,7 @@ th::after {
         }
 
         li > span {
-            margin-right: 0.25em;
+            margin-right: 0.5em;
         }
     }
 }
